--- a/config.env
+++ b/config.env
@@ -1,3 +1,4 @@
 DATA_BASE=mongodb://maziar:maziar@ac-nvofsrx-shard-00-00.i0mqkl3.mongodb.net:27017,ac-nvofsrx-shard-00-01.i0mqkl3.mongodb.net:27017,ac-nvofsrx-shard-00-02.i0mqkl3.mongodb.net:27017/?replicaSet=atlas-otvldi-shard-0&ssl=true&authSource=admin
 PORT=5000
 JWT_SECRET=maziar-ecommerce
+SMS_KEY=ff101516-2309-4f91-afd2-d6ea5f100e8e
