--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "mongoose": "^8.3.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
